@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,24 +16,46 @@
 
 package org.springframework.context.annotation;
 
+import java.io.IOException;
+import java.io.UncheckedIOException;
+import java.lang.reflect.Constructor;
+import java.lang.reflect.Executable;
 import java.util.ArrayList;
-import java.util.Arrays;
+import java.util.HashMap;
 import java.util.HashSet;
 import java.util.LinkedHashMap;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.function.Predicate;
+import java.util.function.Supplier;
+
+import javax.lang.model.element.Modifier;
 
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 
 import org.springframework.aop.framework.autoproxy.AutoProxyUtils;
+import org.springframework.aot.generate.GeneratedMethod;
+import org.springframework.aot.generate.GenerationContext;
+import org.springframework.aot.hint.ExecutableMode;
+import org.springframework.aot.hint.ResourceHints;
+import org.springframework.aot.hint.RuntimeHints;
+import org.springframework.aot.hint.TypeReference;
 import org.springframework.beans.PropertyValues;
 import org.springframework.beans.factory.BeanClassLoaderAware;
 import org.springframework.beans.factory.BeanDefinitionStoreException;
 import org.springframework.beans.factory.BeanFactory;
 import org.springframework.beans.factory.annotation.AnnotatedBeanDefinition;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationAotContribution;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationAotProcessor;
+import org.springframework.beans.factory.aot.BeanFactoryInitializationCode;
+import org.springframework.beans.factory.aot.BeanRegistrationAotContribution;
+import org.springframework.beans.factory.aot.BeanRegistrationAotProcessor;
+import org.springframework.beans.factory.aot.BeanRegistrationCode;
+import org.springframework.beans.factory.aot.BeanRegistrationCodeFragments;
+import org.springframework.beans.factory.aot.BeanRegistrationCodeFragmentsDecorator;
 import org.springframework.beans.factory.config.BeanDefinition;
 import org.springframework.beans.factory.config.BeanDefinitionHolder;
 import org.springframework.beans.factory.config.BeanFactoryPostProcessor;
@@ -48,25 +70,36 @@ import org.springframework.beans.factory.support.AbstractBeanDefinition;
 import org.springframework.beans.factory.support.BeanDefinitionRegistry;
 import org.springframework.beans.factory.support.BeanDefinitionRegistryPostProcessor;
 import org.springframework.beans.factory.support.BeanNameGenerator;
+import org.springframework.beans.factory.support.DefaultListableBeanFactory;
+import org.springframework.beans.factory.support.RegisteredBean;
+import org.springframework.beans.factory.support.RootBeanDefinition;
 import org.springframework.context.ApplicationStartupAware;
 import org.springframework.context.EnvironmentAware;
 import org.springframework.context.ResourceLoaderAware;
 import org.springframework.context.annotation.ConfigurationClassEnhancer.EnhancedConfiguration;
 import org.springframework.core.Ordered;
 import org.springframework.core.PriorityOrdered;
+import org.springframework.core.env.ConfigurableEnvironment;
 import org.springframework.core.env.Environment;
 import org.springframework.core.env.StandardEnvironment;
 import org.springframework.core.io.DefaultResourceLoader;
 import org.springframework.core.io.ResourceLoader;
+import org.springframework.core.io.support.PropertySourceDescriptor;
+import org.springframework.core.io.support.PropertySourceProcessor;
 import org.springframework.core.metrics.ApplicationStartup;
 import org.springframework.core.metrics.StartupStep;
 import org.springframework.core.type.AnnotationMetadata;
 import org.springframework.core.type.MethodMetadata;
 import org.springframework.core.type.classreading.CachingMetadataReaderFactory;
 import org.springframework.core.type.classreading.MetadataReaderFactory;
+import org.springframework.javapoet.CodeBlock;
+import org.springframework.javapoet.CodeBlock.Builder;
+import org.springframework.javapoet.MethodSpec;
+import org.springframework.javapoet.ParameterizedTypeName;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
 import org.springframework.util.ClassUtils;
+import org.springframework.util.CollectionUtils;
 
 /**
  * {@link BeanFactoryPostProcessor} used for bootstrapping processing of
@@ -74,20 +107,22 @@ import org.springframework.util.ClassUtils;
  *
  * <p>Registered by default when using {@code <context:annotation-config/>} or
  * {@code <context:component-scan/>}. Otherwise, may be declared manually as
- * with any other BeanFactoryPostProcessor.
+ * with any other {@link BeanFactoryPostProcessor}.
  *
  * <p>This post processor is priority-ordered as it is important that any
- * {@link Bean} methods declared in {@code @Configuration} classes have
+ * {@link Bean @Bean} methods declared in {@code @Configuration} classes have
  * their corresponding bean definitions registered before any other
- * {@link BeanFactoryPostProcessor} executes.
+ * {@code BeanFactoryPostProcessor} executes.
  *
  * @author Chris Beams
  * @author Juergen Hoeller
  * @author Phillip Webb
+ * @author Sam Brannen
  * @since 3.0
  */
 public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPostProcessor,
-		PriorityOrdered, ResourceLoaderAware, ApplicationStartupAware, BeanClassLoaderAware, EnvironmentAware {
+		BeanRegistrationAotProcessor, BeanFactoryInitializationAotProcessor, PriorityOrdered,
+		ResourceLoaderAware, ApplicationStartupAware, BeanClassLoaderAware, EnvironmentAware {
 
 	/**
 	 * A {@code BeanNameGenerator} using fully qualified class names as default bean names.
@@ -103,13 +138,6 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 
 	private static final String IMPORT_REGISTRY_BEAN_NAME =
 			ConfigurationClassPostProcessor.class.getName() + ".importRegistry";
-
-	/**
-	 * Whether this environment lives within a native image.
-	 * Exposed as a private static field rather than in a {@code NativeImageDetector.inNativeImage()} static method due to https://github.com/oracle/graal/issues/2594.
-	 * @see <a href="https://github.com/oracle/graal/blob/master/sdk/src/org.graalvm.nativeimage/src/org/graalvm/nativeimage/ImageInfo.java">ImageInfo.java</a>
-	 */
-	private static final boolean IN_NATIVE_IMAGE = (System.getProperty("org.graalvm.nativeimage.imagecode") != null);
 
 
 	private final Log logger = LogFactory.getLog(getClass());
@@ -146,6 +174,9 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 	private BeanNameGenerator importBeanNameGenerator = IMPORT_BEAN_NAME_GENERATOR;
 
 	private ApplicationStartup applicationStartup = ApplicationStartup.DEFAULT;
+
+	@Nullable
+	private List<PropertySourceDescriptor> propertySourceDescriptors;
 
 
 	@Override
@@ -274,6 +305,37 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 		beanFactory.addBeanPostProcessor(new ImportAwareBeanPostProcessor(beanFactory));
 	}
 
+	@Nullable
+	@Override
+	public BeanRegistrationAotContribution processAheadOfTime(RegisteredBean registeredBean) {
+		Object configClassAttr = registeredBean.getMergedBeanDefinition()
+				.getAttribute(ConfigurationClassUtils.CONFIGURATION_CLASS_ATTRIBUTE);
+		if (ConfigurationClassUtils.CONFIGURATION_CLASS_FULL.equals(configClassAttr)) {
+			Class<?> proxyClass = registeredBean.getBeanType().toClass();
+			return BeanRegistrationAotContribution.withCustomCodeFragments(codeFragments ->
+					new ConfigurationClassProxyBeanRegistrationCodeFragments(codeFragments, proxyClass));
+		}
+		return null;
+	}
+
+	@Override
+	@Nullable
+	public BeanFactoryInitializationAotContribution processAheadOfTime(ConfigurableListableBeanFactory beanFactory) {
+		boolean hasPropertySourceDescriptors = !CollectionUtils.isEmpty(this.propertySourceDescriptors);
+		boolean hasImportRegistry = beanFactory.containsBean(IMPORT_REGISTRY_BEAN_NAME);
+		if (hasPropertySourceDescriptors || hasImportRegistry) {
+			return (generationContext, code) -> {
+				if (hasPropertySourceDescriptors) {
+					new PropertySourcesAotContribution(this.propertySourceDescriptors).applyTo(generationContext, code);
+				}
+				if (hasImportRegistry) {
+					new ImportAwareAotContribution(beanFactory).applyTo(generationContext, code);
+				}
+			};
+		}
+		return null;
+	}
+
 	/**
 	 * Build and validate a configuration model based on the registry of
 	 * {@link Configuration} classes.
@@ -352,7 +414,7 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 			candidates.clear();
 			if (registry.getBeanDefinitionCount() > candidateNames.length) {
 				String[] newCandidateNames = registry.getBeanDefinitionNames();
-				Set<String> oldCandidateNames = new HashSet<>(Arrays.asList(candidateNames));
+				Set<String> oldCandidateNames = Set.of(candidateNames);
 				Set<String> alreadyParsedClasses = new HashSet<>();
 				for (ConfigurationClass configurationClass : alreadyParsed) {
 					alreadyParsedClasses.add(configurationClass.getMetadata().getClassName());
@@ -376,10 +438,13 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 			sbr.registerSingleton(IMPORT_REGISTRY_BEAN_NAME, parser.getImportRegistry());
 		}
 
-		if (this.metadataReaderFactory instanceof CachingMetadataReaderFactory) {
+		// Store the PropertySourceDescriptors to contribute them Ahead-of-time if necessary
+		this.propertySourceDescriptors = parser.getPropertySourceDescriptors();
+
+		if (this.metadataReaderFactory instanceof CachingMetadataReaderFactory cachingMetadataReaderFactory) {
 			// Clear cache in externally provided MetadataReaderFactory; this is a no-op
 			// for a shared cache since it'll be cleared by the ApplicationContext.
-			((CachingMetadataReaderFactory) this.metadataReaderFactory).clearCache();
+			cachingMetadataReaderFactory.clearCache();
 		}
 	}
 
@@ -395,15 +460,21 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 		for (String beanName : beanFactory.getBeanDefinitionNames()) {
 			BeanDefinition beanDef = beanFactory.getBeanDefinition(beanName);
 			Object configClassAttr = beanDef.getAttribute(ConfigurationClassUtils.CONFIGURATION_CLASS_ATTRIBUTE);
+			AnnotationMetadata annotationMetadata = null;
 			MethodMetadata methodMetadata = null;
-			if (beanDef instanceof AnnotatedBeanDefinition) {
-				methodMetadata = ((AnnotatedBeanDefinition) beanDef).getFactoryMethodMetadata();
+			if (beanDef instanceof AnnotatedBeanDefinition annotatedBeanDefinition) {
+				annotationMetadata = annotatedBeanDefinition.getMetadata();
+				methodMetadata = annotatedBeanDefinition.getFactoryMethodMetadata();
 			}
-			if ((configClassAttr != null || methodMetadata != null) && beanDef instanceof AbstractBeanDefinition) {
+			if ((configClassAttr != null || methodMetadata != null) &&
+					(beanDef instanceof AbstractBeanDefinition abd) && !abd.hasBeanClass()) {
 				// Configuration class (full or lite) or a configuration-derived @Bean method
-				// -> resolve bean class at this point...
-				AbstractBeanDefinition abd = (AbstractBeanDefinition) beanDef;
-				if (!abd.hasBeanClass()) {
+				// -> eagerly resolve bean class at this point, unless it's a 'lite' configuration
+				// or component class without @Bean methods.
+				boolean liteConfigurationCandidateWithoutBeanMethods =
+						(ConfigurationClassUtils.CONFIGURATION_CLASS_LITE.equals(configClassAttr) &&
+							annotationMetadata != null && !ConfigurationClassUtils.hasBeanMethods(annotationMetadata));
+				if (!liteConfigurationCandidateWithoutBeanMethods) {
 					try {
 						abd.resolveBeanClass(this.beanClassLoader);
 					}
@@ -414,7 +485,7 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 				}
 			}
 			if (ConfigurationClassUtils.CONFIGURATION_CLASS_FULL.equals(configClassAttr)) {
-				if (!(beanDef instanceof AbstractBeanDefinition)) {
+				if (!(beanDef instanceof AbstractBeanDefinition abd)) {
 					throw new BeanDefinitionStoreException("Cannot enhance @Configuration bean definition '" +
 							beanName + "' since it is not stored in an AbstractBeanDefinition subclass");
 				}
@@ -424,10 +495,10 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 							"is a non-static @Bean method with a BeanDefinitionRegistryPostProcessor " +
 							"return type: Consider declaring such methods as 'static'.");
 				}
-				configBeanDefs.put(beanName, (AbstractBeanDefinition) beanDef);
+				configBeanDefs.put(beanName, abd);
 			}
 		}
-		if (configBeanDefs.isEmpty() || IN_NATIVE_IMAGE) {
+		if (configBeanDefs.isEmpty()) {
 			// nothing to enhance -> return immediately
 			enhanceConfigClasses.end();
 			return;
@@ -465,23 +536,230 @@ public class ConfigurationClassPostProcessor implements BeanDefinitionRegistryPo
 		public PropertyValues postProcessProperties(@Nullable PropertyValues pvs, Object bean, String beanName) {
 			// Inject the BeanFactory before AutowiredAnnotationBeanPostProcessor's
 			// postProcessProperties method attempts to autowire other configuration beans.
-			if (bean instanceof EnhancedConfiguration) {
-				((EnhancedConfiguration) bean).setBeanFactory(this.beanFactory);
+			if (bean instanceof EnhancedConfiguration enhancedConfiguration) {
+				enhancedConfiguration.setBeanFactory(this.beanFactory);
 			}
 			return pvs;
 		}
 
 		@Override
 		public Object postProcessBeforeInitialization(Object bean, String beanName) {
-			if (bean instanceof ImportAware) {
+			if (bean instanceof ImportAware importAware) {
 				ImportRegistry ir = this.beanFactory.getBean(IMPORT_REGISTRY_BEAN_NAME, ImportRegistry.class);
 				AnnotationMetadata importingClass = ir.getImportingClassFor(ClassUtils.getUserClass(bean).getName());
 				if (importingClass != null) {
-					((ImportAware) bean).setImportMetadata(importingClass);
+					importAware.setImportMetadata(importingClass);
 				}
 			}
 			return bean;
 		}
+	}
+
+
+	private static class ImportAwareAotContribution implements BeanFactoryInitializationAotContribution {
+
+		private static final String BEAN_FACTORY_VARIABLE = BeanFactoryInitializationCode.BEAN_FACTORY_VARIABLE;
+
+		private static final ParameterizedTypeName STRING_STRING_MAP =
+				ParameterizedTypeName.get(Map.class, String.class, String.class);
+
+		private static final String MAPPINGS_VARIABLE = "mappings";
+
+		private static final String BEAN_DEFINITION_VARIABLE = "beanDefinition";
+
+		private static final String BEAN_NAME = "org.springframework.context.annotation.internalImportAwareAotProcessor";
+
+		private final ConfigurableListableBeanFactory beanFactory;
+
+		public ImportAwareAotContribution(ConfigurableListableBeanFactory beanFactory) {
+			this.beanFactory = beanFactory;
+		}
+
+		@Override
+		public void applyTo(GenerationContext generationContext,
+				BeanFactoryInitializationCode beanFactoryInitializationCode) {
+
+			Map<String, String> mappings = buildImportAwareMappings();
+			if (!mappings.isEmpty()) {
+				GeneratedMethod generatedMethod = beanFactoryInitializationCode
+						.getMethods()
+						.add("addImportAwareBeanPostProcessors", method ->
+								generateAddPostProcessorMethod(method, mappings));
+				beanFactoryInitializationCode
+						.addInitializer(generatedMethod.toMethodReference());
+				ResourceHints hints = generationContext.getRuntimeHints().resources();
+				mappings.forEach(
+						(target, from) -> hints.registerType(TypeReference.of(from)));
+			}
+		}
+
+		private void generateAddPostProcessorMethod(MethodSpec.Builder method, Map<String, String> mappings) {
+			method.addJavadoc("Add ImportAwareBeanPostProcessor to support ImportAware beans");
+			method.addModifiers(Modifier.PRIVATE);
+			method.addParameter(DefaultListableBeanFactory.class, BEAN_FACTORY_VARIABLE);
+			method.addCode(generateAddPostProcessorCode(mappings));
+		}
+
+		private CodeBlock generateAddPostProcessorCode(Map<String, String> mappings) {
+			CodeBlock.Builder code = CodeBlock.builder();
+			code.addStatement("$T $L = new $T<>()", STRING_STRING_MAP,
+					MAPPINGS_VARIABLE, HashMap.class);
+			mappings.forEach((type, from) -> code.addStatement("$L.put($S, $S)",
+					MAPPINGS_VARIABLE, type, from));
+			code.addStatement("$T $L = new $T($T.class)", RootBeanDefinition.class,
+					BEAN_DEFINITION_VARIABLE, RootBeanDefinition.class, ImportAwareAotBeanPostProcessor.class);
+			code.addStatement("$L.setRole($T.ROLE_INFRASTRUCTURE)",
+					BEAN_DEFINITION_VARIABLE, BeanDefinition.class);
+			code.addStatement("$L.setInstanceSupplier(() -> new $T($L))",
+					BEAN_DEFINITION_VARIABLE, ImportAwareAotBeanPostProcessor.class, MAPPINGS_VARIABLE);
+			code.addStatement("$L.registerBeanDefinition($S, $L)",
+					BEAN_FACTORY_VARIABLE, BEAN_NAME, BEAN_DEFINITION_VARIABLE);
+			return code.build();
+		}
+
+		private Map<String, String> buildImportAwareMappings() {
+			ImportRegistry importRegistry = this.beanFactory
+					.getBean(IMPORT_REGISTRY_BEAN_NAME, ImportRegistry.class);
+			Map<String, String> mappings = new LinkedHashMap<>();
+			for (String name : this.beanFactory.getBeanDefinitionNames()) {
+				Class<?> beanType = this.beanFactory.getType(name);
+				if (beanType != null && ImportAware.class.isAssignableFrom(beanType)) {
+					String target = ClassUtils.getUserClass(beanType).getName();
+					AnnotationMetadata from = importRegistry.getImportingClassFor(target);
+					if (from != null) {
+						mappings.put(target, from.getClassName());
+					}
+				}
+			}
+			return mappings;
+		}
+
+	}
+
+	private static class PropertySourcesAotContribution implements BeanFactoryInitializationAotContribution {
+
+		private static final String ENVIRONMENT_VARIABLE = "environment";
+
+		private static final String RESOURCE_LOADER_VARIABLE = "resourceLoader";
+
+		private final List<PropertySourceDescriptor> descriptors;
+
+		PropertySourcesAotContribution(List<PropertySourceDescriptor> descriptors) {
+			this.descriptors = descriptors;
+		}
+
+		@Override
+		public void applyTo(GenerationContext generationContext, BeanFactoryInitializationCode beanFactoryInitializationCode) {
+			GeneratedMethod generatedMethod = beanFactoryInitializationCode
+					.getMethods()
+					.add("processPropertySources", this::generateAddPropertySourceProcessorMethod);
+			beanFactoryInitializationCode
+					.addInitializer(generatedMethod.toMethodReference());
+		}
+
+		private void generateAddPropertySourceProcessorMethod(MethodSpec.Builder method) {
+			method.addJavadoc("Apply known @PropertySources to the environment.");
+			method.addModifiers(Modifier.PRIVATE);
+			method.addParameter(ConfigurableEnvironment.class, ENVIRONMENT_VARIABLE);
+			method.addParameter(ResourceLoader.class, RESOURCE_LOADER_VARIABLE);
+			method.addCode(generateAddPropertySourceProcessorCode());
+		}
+
+		private CodeBlock generateAddPropertySourceProcessorCode() {
+			Builder code = CodeBlock.builder();
+			String processorVariable = "processor";
+			code.addStatement("$T $L = new $T($L, $L)", PropertySourceProcessor.class,
+					processorVariable, PropertySourceProcessor.class, ENVIRONMENT_VARIABLE,
+					RESOURCE_LOADER_VARIABLE);
+			code.beginControlFlow("try");
+			for (PropertySourceDescriptor descriptor : this.descriptors) {
+				code.addStatement("$L.processPropertySource($L)", processorVariable,
+						generatePropertySourceDescriptorCode(descriptor));
+			}
+			code.nextControlFlow("catch ($T ex)", IOException.class);
+			code.addStatement("throw new $T(ex)", UncheckedIOException.class);
+			code.endControlFlow();
+			return code.build();
+		}
+
+		private CodeBlock generatePropertySourceDescriptorCode(PropertySourceDescriptor descriptor) {
+			CodeBlock.Builder code = CodeBlock.builder();
+			code.add("new $T(", PropertySourceDescriptor.class);
+			CodeBlock values = descriptor.locations().stream()
+					.map(value -> CodeBlock.of("$S", value)).collect(CodeBlock.joining(", "));
+			if (descriptor.name() == null && descriptor.propertySourceFactory() == null
+					&& descriptor.encoding() == null && !descriptor.ignoreResourceNotFound()) {
+				code.add("$L)", values);
+			}
+			else {
+				List<CodeBlock> arguments = new ArrayList<>();
+				arguments.add(CodeBlock.of("$T.of($L)", List.class, values));
+				arguments.add(CodeBlock.of("$L", descriptor.ignoreResourceNotFound()));
+				arguments.add(handleNull(descriptor.name(), () -> CodeBlock.of("$S", descriptor.name())));
+				arguments.add(handleNull(descriptor.propertySourceFactory(),
+						() -> CodeBlock.of("$T.class", descriptor.propertySourceFactory())));
+				arguments.add(handleNull(descriptor.encoding(),
+						() -> CodeBlock.of("$S", descriptor.encoding())));
+				code.add(CodeBlock.join(arguments, ", "));
+				code.add(")");
+			}
+			return code.build();
+		}
+
+		private CodeBlock handleNull(@Nullable Object value, Supplier<CodeBlock> nonNull) {
+			if (value == null) {
+				return CodeBlock.of("null");
+			}
+			else {
+				return nonNull.get();
+			}
+		}
+
+	}
+
+	private static class ConfigurationClassProxyBeanRegistrationCodeFragments extends BeanRegistrationCodeFragmentsDecorator {
+
+		private final Class<?> proxyClass;
+
+		public ConfigurationClassProxyBeanRegistrationCodeFragments(BeanRegistrationCodeFragments codeFragments,
+				Class<?> proxyClass) {
+			super(codeFragments);
+			this.proxyClass = proxyClass;
+		}
+
+		@Override
+		public CodeBlock generateSetBeanDefinitionPropertiesCode(GenerationContext generationContext,
+				BeanRegistrationCode beanRegistrationCode, RootBeanDefinition beanDefinition, Predicate<String> attributeFilter) {
+			CodeBlock.Builder code = CodeBlock.builder();
+			code.add(super.generateSetBeanDefinitionPropertiesCode(generationContext,
+					beanRegistrationCode, beanDefinition, attributeFilter));
+			code.addStatement("$T.initializeConfigurationClass($T.class)",
+					ConfigurationClassUtils.class, ClassUtils.getUserClass(this.proxyClass));
+			return code.build();
+		}
+
+		@Override
+		public CodeBlock generateInstanceSupplierCode(GenerationContext generationContext,
+				BeanRegistrationCode beanRegistrationCode, Executable constructorOrFactoryMethod,
+				boolean allowDirectSupplierShortcut) {
+			Executable executableToUse = proxyExecutable(generationContext.getRuntimeHints(), constructorOrFactoryMethod);
+			return super.generateInstanceSupplierCode(generationContext, beanRegistrationCode,
+					executableToUse, allowDirectSupplierShortcut);
+		}
+
+		private Executable proxyExecutable(RuntimeHints runtimeHints, Executable userExecutable) {
+			if (userExecutable instanceof Constructor<?> userConstructor) {
+				try {
+					runtimeHints.reflection().registerConstructor(userConstructor, ExecutableMode.INTROSPECT);
+					return this.proxyClass.getConstructor(userExecutable.getParameterTypes());
+				}
+				catch (NoSuchMethodException ex) {
+					throw new IllegalStateException("No matching constructor found on proxy " + this.proxyClass, ex);
+				}
+			}
+			return userExecutable;
+		}
+
 	}
 
 }
