@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,25 +19,27 @@ package org.springframework.format.datetime;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
-import java.util.Collections;
 import java.util.Date;
-import java.util.EnumMap;
 import java.util.Locale;
 import java.util.Map;
 import java.util.TimeZone;
 
 import org.springframework.format.Formatter;
+import org.springframework.format.annotation.DateTimeFormat;
 import org.springframework.format.annotation.DateTimeFormat.ISO;
 import org.springframework.lang.Nullable;
+import org.springframework.util.ObjectUtils;
 import org.springframework.util.StringUtils;
 
 /**
  * A formatter for {@link java.util.Date} types.
- * Allows the configuration of an explicit date pattern and locale.
+ * <p>Supports the configuration of an explicit date time pattern, timezone,
+ * locale, and fallback date time patterns for lenient parsing.
  *
  * @author Keith Donald
  * @author Juergen Hoeller
  * @author Phillip Webb
+ * @author Sam Brannen
  * @since 3.0
  * @see SimpleDateFormat
  */
@@ -45,19 +47,20 @@ public class DateFormatter implements Formatter<Date> {
 
 	private static final TimeZone UTC = TimeZone.getTimeZone("UTC");
 
-	private static final Map<ISO, String> ISO_PATTERNS;
-
-	static {
-		Map<ISO, String> formats = new EnumMap<>(ISO.class);
-		formats.put(ISO.DATE, "yyyy-MM-dd");
-		formats.put(ISO.TIME, "HH:mm:ss.SSSXXX");
-		formats.put(ISO.DATE_TIME, "yyyy-MM-dd'T'HH:mm:ss.SSSXXX");
-		ISO_PATTERNS = Collections.unmodifiableMap(formats);
-	}
+	private static final Map<ISO, String> ISO_PATTERNS = Map.of(
+			ISO.DATE, "yyyy-MM-dd",
+			ISO.TIME, "HH:mm:ss.SSSXXX",
+			ISO.DATE_TIME, "yyyy-MM-dd'T'HH:mm:ss.SSSXXX");
 
 
 	@Nullable
+	private Object source;
+
+	@Nullable
 	private String pattern;
+
+	@Nullable
+	private String[] fallbackPatterns;
 
 	private int style = DateFormat.DEFAULT;
 
@@ -74,18 +77,32 @@ public class DateFormatter implements Formatter<Date> {
 
 
 	/**
-	 * Create a new default DateFormatter.
+	 * Create a new default {@code DateFormatter}.
 	 */
 	public DateFormatter() {
 	}
 
 	/**
-	 * Create a new DateFormatter for the given date pattern.
+	 * Create a new {@code DateFormatter} for the given date time pattern.
 	 */
 	public DateFormatter(String pattern) {
 		this.pattern = pattern;
 	}
 
+
+	/**
+	 * Set the source of the configuration for this {@code DateFormatter} &mdash;
+	 * for example, an instance of the {@link DateTimeFormat @DateTimeFormat}
+	 * annotation if such an annotation was used to configure this {@code DateFormatter}.
+	 * <p>The supplied source object will only be used for descriptive purposes
+	 * by invoking its {@code toString()} method &mdash; for example, when
+	 * generating an exception message to provide further context.
+	 * @param source the source of the configuration
+	 * @since 5.3.5
+	 */
+	public void setSource(Object source) {
+		this.source = source;
+	}
 
 	/**
 	 * Set the pattern to use to format date values.
@@ -96,7 +113,19 @@ public class DateFormatter implements Formatter<Date> {
 	}
 
 	/**
-	 * Set the ISO format used for this date.
+	 * Set additional patterns to use as a fallback in case parsing fails for the
+	 * configured {@linkplain #setPattern pattern}, {@linkplain #setIso ISO format},
+	 * {@linkplain #setStyle style}, or {@linkplain #setStylePattern style pattern}.
+	 * @param fallbackPatterns the fallback parsing patterns
+	 * @since 5.3.5
+	 * @see DateTimeFormat#fallbackPatterns()
+	 */
+	public void setFallbackPatterns(String... fallbackPatterns) {
+		this.fallbackPatterns = fallbackPatterns;
+	}
+
+	/**
+	 * Set the ISO format to use to format date values.
 	 * @param iso the {@link ISO} format
 	 * @since 3.2
 	 */
@@ -105,7 +134,7 @@ public class DateFormatter implements Formatter<Date> {
 	}
 
 	/**
-	 * Set the style to use to format date values.
+	 * Set the {@link DateFormat} style to use to format date values.
 	 * <p>If not specified, DateFormat's default style will be used.
 	 * @see DateFormat#DEFAULT
 	 * @see DateFormat#SHORT
@@ -118,8 +147,10 @@ public class DateFormatter implements Formatter<Date> {
 	}
 
 	/**
-	 * Set the two character to use to format date values. The first character used for
-	 * the date style, the second is for the time style. Supported characters are
+	 * Set the two characters to use to format date values.
+	 * <p>The first character is used for the date style; the second is used for
+	 * the time style.
+	 * <p>Supported characters:
 	 * <ul>
 	 * <li>'S' = Small</li>
 	 * <li>'M' = Medium</li>
@@ -136,14 +167,14 @@ public class DateFormatter implements Formatter<Date> {
 	}
 
 	/**
-	 * Set the TimeZone to normalize the date values into, if any.
+	 * Set the {@link TimeZone} to normalize the date values into, if any.
 	 */
 	public void setTimeZone(TimeZone timeZone) {
 		this.timeZone = timeZone;
 	}
 
 	/**
-	 * Specify whether or not parsing is to be lenient. Default is false.
+	 * Specify whether parsing is to be lenient. Default is {@code false}.
 	 * <p>With lenient parsing, the parser may allow inputs that do not precisely match the format.
 	 * With strict parsing, inputs must match the format exactly.
 	 */
@@ -159,12 +190,45 @@ public class DateFormatter implements Formatter<Date> {
 
 	@Override
 	public Date parse(String text, Locale locale) throws ParseException {
-		return getDateFormat(locale).parse(text);
+		try {
+			return getDateFormat(locale).parse(text);
+		}
+		catch (ParseException ex) {
+			if (!ObjectUtils.isEmpty(this.fallbackPatterns)) {
+				for (String pattern : this.fallbackPatterns) {
+					try {
+						DateFormat dateFormat = configureDateFormat(new SimpleDateFormat(pattern, locale));
+						// Align timezone for parsing format with printing format if ISO is set.
+						if (this.iso != null && this.iso != ISO.NONE) {
+							dateFormat.setTimeZone(UTC);
+						}
+						return dateFormat.parse(text);
+					}
+					catch (ParseException ignoredException) {
+						// Ignore fallback parsing exceptions since the exception thrown below
+						// will include information from the "source" if available -- for example,
+						// the toString() of a @DateTimeFormat annotation.
+					}
+				}
+			}
+			if (this.source != null) {
+				ParseException parseException = new ParseException(
+					String.format("Unable to parse date time value \"%s\" using configuration from %s", text, this.source),
+					ex.getErrorOffset());
+				parseException.initCause(ex);
+				throw parseException;
+			}
+			// else rethrow original exception
+			throw ex;
+		}
 	}
 
 
 	protected DateFormat getDateFormat(Locale locale) {
-		DateFormat dateFormat = createDateFormat(locale);
+		return configureDateFormat(createDateFormat(locale));
+	}
+
+	private DateFormat configureDateFormat(DateFormat dateFormat) {
 		if (this.timeZone != null) {
 			dateFormat.setTimeZone(this.timeZone);
 		}
