@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -66,7 +66,7 @@ public class GenericConversionServiceBenchmark {
 
 		@Setup(Level.Trial)
 		public void setup() throws Exception {
-			this.source = IntStream.rangeClosed(1, collectionSize).mapToObj(String::valueOf).collect(Collectors.toList());
+			this.source = IntStream.rangeClosed(1, collectionSize).mapToObj(String::valueOf).toList();
 			List<Integer> target = new ArrayList<>();
 			this.targetTypeDesc = TypeDescriptor.forObject(target);
 		}
