@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import io.netty.handler.codec.http.HttpHeaders;
 
@@ -38,7 +37,7 @@ import org.springframework.util.MultiValueMap;
  * @author Brian Clozel
  * @since 5.1.1
  */
-class NettyHeadersAdapter implements MultiValueMap<String, String> {
+final class NettyHeadersAdapter implements MultiValueMap<String, String> {
 
 	private final HttpHeaders headers;
 
@@ -107,7 +106,7 @@ class NettyHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public boolean containsKey(Object key) {
-		return (key instanceof String && this.headers.contains((String) key));
+		return (key instanceof String headerName && this.headers.contains(headerName));
 	}
 
 	@Override
@@ -137,9 +136,9 @@ class NettyHeadersAdapter implements MultiValueMap<String, String> {
 	@Nullable
 	@Override
 	public List<String> remove(Object key) {
-		if (key instanceof String) {
-			List<String> previousValues = this.headers.getAll((String) key);
-			this.headers.remove((String) key);
+		if (key instanceof String headerName) {
+			List<String> previousValues = this.headers.getAll(headerName);
+			this.headers.remove(headerName);
 			return previousValues;
 		}
 		return null;
@@ -147,7 +146,7 @@ class NettyHeadersAdapter implements MultiValueMap<String, String> {
 
 	@Override
 	public void putAll(Map<? extends String, ? extends List<String>> map) {
-		map.forEach(this.headers::add);
+		map.forEach(this.headers::set);
 	}
 
 	@Override
@@ -163,12 +162,12 @@ class NettyHeadersAdapter implements MultiValueMap<String, String> {
 	@Override
 	public Collection<List<String>> values() {
 		return this.headers.names().stream()
-				.map(this.headers::getAll).collect(Collectors.toList());
+				.map(this.headers::getAll).toList();
 	}
 
 	@Override
 	public Set<Entry<String, List<String>>> entrySet() {
-		return new AbstractSet<Entry<String, List<String>>>() {
+		return new AbstractSet<>() {
 			@Override
 			public Iterator<Entry<String, List<String>>> iterator() {
 				return new EntryIterator();
@@ -190,7 +189,7 @@ class NettyHeadersAdapter implements MultiValueMap<String, String> {
 
 	private class EntryIterator implements Iterator<Entry<String, List<String>>> {
 
-		private Iterator<String> names = headers.names().iterator();
+		private final Iterator<String> names = headers.names().iterator();
 
 		@Override
 		public boolean hasNext() {
