@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -22,7 +22,6 @@ import java.net.URI;
 import java.net.URISyntaxException;
 import java.nio.charset.Charset;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.StringJoiner;
@@ -46,6 +45,7 @@ import org.springframework.util.StringUtils;
  * @author Juergen Hoeller
  * @author Rossen Stoyanchev
  * @author Phillip Webb
+ * @author Sam Brannen
  * @since 3.1.3
  * @see <a href="https://tools.ietf.org/html/rfc3986#section-1.2.3">Hierarchical URIs</a>
  */
@@ -192,7 +192,12 @@ final class HierarchicalUriComponents extends UriComponents {
 			throw new IllegalStateException(
 					"The port contains a URI variable but has not been expanded yet: " + this.port);
 		}
-		return Integer.parseInt(this.port);
+		try {
+			return Integer.parseInt(this.port);
+		}
+		catch (NumberFormatException ex) {
+			throw new IllegalStateException("The port must be an integer: " + this.port);
+		}
 	}
 
 	@Override
@@ -533,7 +538,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		if (getHost() != null) {
 			builder.host(getHost());
 		}
-		// Avoid parsing the port, may have URI variable..
+		// Avoid parsing the port, may have URI variable.
 		if (this.port != null) {
 			builder.port(this.port);
 		}
@@ -552,10 +557,9 @@ final class HierarchicalUriComponents extends UriComponents {
 		if (this == other) {
 			return true;
 		}
-		if (!(other instanceof HierarchicalUriComponents)) {
+		if (!(other instanceof HierarchicalUriComponents otherComp)) {
 			return false;
 		}
-		HierarchicalUriComponents otherComp = (HierarchicalUriComponents) other;
 		return (ObjectUtils.nullSafeEquals(getScheme(), otherComp.getScheme()) &&
 				ObjectUtils.nullSafeEquals(getUserInfo(), otherComp.getUserInfo()) &&
 				ObjectUtils.nullSafeEquals(getHost(), otherComp.getHost()) &&
@@ -767,44 +771,47 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		private final StringBuilder output = new StringBuilder();
 
+		private boolean variableWithNameAndRegex;
 
 		public UriTemplateEncoder(Charset charset) {
 			this.charset = charset;
 		}
 
-
 		@Override
 		public String apply(String source, Type type) {
-
-			// Only URI variable (nothing to encode)..
-			if (source.length() > 1 && source.charAt(0) == '{' && source.charAt(source.length() -1) == '}') {
+			// URI variable only?
+			if (isUriVariable(source)) {
 				return source;
 			}
-
-			// Only literal (encode full source)..
+			// Literal template only?
 			if (source.indexOf('{') == -1) {
 				return encodeUriComponent(source, this.charset, type);
 			}
-
-			// Mixed literal parts and URI variables, maybe (encode literal parts only)..
 			int level = 0;
 			clear(this.currentLiteral);
 			clear(this.currentVariable);
 			clear(this.output);
 			for (int i = 0; i < source.length(); i++) {
 				char c = source.charAt(i);
+				if (c == ':' && level == 1) {
+					this.variableWithNameAndRegex = true;
+				}
 				if (c == '{') {
 					level++;
 					if (level == 1) {
-						encodeAndAppendCurrentLiteral(type);
+						append(this.currentLiteral, true, type);
 					}
 				}
 				if (c == '}' && level > 0) {
 					level--;
 					this.currentVariable.append('}');
 					if (level == 0) {
-						this.output.append(this.currentVariable);
-						clear(this.currentVariable);
+						boolean encode = !isUriVariable(this.currentVariable);
+						append(this.currentVariable, encode, type);
+					}
+					else if (!this.variableWithNameAndRegex) {
+						append(this.currentVariable, true, type);
+						level = 0;
 					}
 				}
 				else if (level > 0) {
@@ -817,13 +824,38 @@ final class HierarchicalUriComponents extends UriComponents {
 			if (level > 0) {
 				this.currentLiteral.append(this.currentVariable);
 			}
-			encodeAndAppendCurrentLiteral(type);
+			append(this.currentLiteral, true, type);
 			return this.output.toString();
 		}
 
-		private void encodeAndAppendCurrentLiteral(Type type) {
-			this.output.append(encodeUriComponent(this.currentLiteral.toString(), this.charset, type));
-			clear(this.currentLiteral);
+		/**
+		 * Whether the given String is a single URI variable that can be
+		 * expanded. It must have '{' and '}' surrounding non-empty text and no
+		 * nested placeholders unless it is a variable with regex syntax,
+		 * e.g. {@code "/{year:\d{1,4}}"}.
+		 */
+		private boolean isUriVariable(CharSequence source) {
+			if (source.length() < 2 || source.charAt(0) != '{' || source.charAt(source.length() -1) != '}') {
+				return false;
+			}
+			boolean hasText = false;
+			for (int i = 1; i < source.length() - 1; i++) {
+				char c = source.charAt(i);
+				if (c == ':' && i > 1) {
+					return true;
+				}
+				if (c == '{' || c == '}') {
+					return false;
+				}
+				hasText = (hasText || !Character.isWhitespace(c));
+			}
+			return hasText;
+		}
+
+		private void append(StringBuilder sb, boolean encode, Type type) {
+			this.output.append(encode ? encodeUriComponent(sb.toString(), this.charset, type) : sb);
+			clear(sb);
+			this.variableWithNameAndRegex = false;
 		}
 
 		private void clear(StringBuilder sb) {
@@ -870,7 +902,7 @@ final class HierarchicalUriComponents extends UriComponents {
 		@Override
 		public List<String> getPathSegments() {
 			String[] segments = StringUtils.tokenizeToStringArray(getPath(), PATH_DELIMITER_STRING);
-			return Collections.unmodifiableList(Arrays.asList(segments));
+			return List.of(segments);
 		}
 
 		@Override
@@ -897,8 +929,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof FullPathComponent &&
-					getPath().equals(((FullPathComponent) other).getPath())));
+			return (this == other || (other instanceof FullPathComponent fullPathComponent &&
+					getPath().equals(fullPathComponent.getPath())));
 		}
 
 		@Override
@@ -971,8 +1003,8 @@ final class HierarchicalUriComponents extends UriComponents {
 
 		@Override
 		public boolean equals(@Nullable Object other) {
-			return (this == other || (other instanceof PathSegmentComponent &&
-					getPathSegments().equals(((PathSegmentComponent) other).getPathSegments())));
+			return (this == other || (other instanceof PathSegmentComponent pathSegmentComponent &&
+					getPathSegments().equals(pathSegmentComponent.getPathSegments())));
 		}
 
 		@Override
