@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -21,7 +21,6 @@ import java.net.URI;
 import java.nio.charset.Charset;
 import java.security.Principal;
 import java.time.Instant;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
@@ -39,7 +38,10 @@ import org.springframework.core.codec.Hints;
 import org.springframework.core.io.buffer.DataBuffer;
 import org.springframework.http.HttpCookie;
 import org.springframework.http.HttpHeaders;
+import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
+import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.MediaType;
 import org.springframework.http.codec.HttpMessageReader;
 import org.springframework.http.codec.multipart.Part;
@@ -85,7 +87,7 @@ class DefaultServerRequest implements ServerRequest {
 
 	DefaultServerRequest(ServerWebExchange exchange, List<HttpMessageReader<?>> messageReaders) {
 		this.exchange = exchange;
-		this.messageReaders = Collections.unmodifiableList(new ArrayList<>(messageReaders));
+		this.messageReaders = List.copyOf(messageReaders);
 		this.headers = new DefaultHeaders();
 	}
 
@@ -97,8 +99,8 @@ class DefaultServerRequest implements ServerRequest {
 		}
 
 		if (exchange.checkNotModified(etag, lastModified)) {
-			Integer statusCode = exchange.getResponse().getRawStatusCode();
-			return ServerResponse.status(statusCode != null ? statusCode : 200)
+			HttpStatusCode statusCode = exchange.getResponse().getStatusCode();
+			return ServerResponse.status(statusCode != null ? statusCode : HttpStatus.OK)
 					.headers(headers -> headers.addAll(exchange.getResponse().getHeaders()))
 					.build();
 		}
@@ -108,8 +110,14 @@ class DefaultServerRequest implements ServerRequest {
 	}
 
 	@Override
+	public HttpMethod method() {
+		return request().getMethod();
+	}
+
+	@Override
+	@Deprecated
 	public String methodName() {
-		return request().getMethodValue();
+		return request().getMethod().name();
 	}
 
 	@Override
