@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -18,7 +18,6 @@ package org.springframework.web.reactive.result.condition;
 
 import java.util.Arrays;
 import java.util.Iterator;
-import java.util.stream.Collectors;
 
 import org.junit.jupiter.api.Test;
 
@@ -107,10 +106,14 @@ public class PatternsRequestConditionTests {
 	}
 
 	@Test
+	@SuppressWarnings("deprecation")
 	public void matchTrailingSlash() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/foo/"));
 
-		PatternsRequestCondition condition = createPatternsCondition("/foo");
+		PathPatternParser patternParser = new PathPatternParser();
+		patternParser.setMatchOptionalTrailingSeparator(true);
+
+		PatternsRequestCondition condition = new PatternsRequestCondition(patternParser.parse("/foo"));
 		PatternsRequestCondition match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
@@ -118,7 +121,7 @@ public class PatternsRequestConditionTests {
 				.as("Should match by default")
 				.isEqualTo("/foo");
 
-		condition = createPatternsCondition("/foo");
+		condition = new PatternsRequestCondition(patternParser.parse("/foo"));
 		match = condition.getMatchingCondition(exchange);
 
 		assertThat(match).isNotNull();
@@ -165,7 +168,7 @@ public class PatternsRequestConditionTests {
 	@Test
 	public void equallyMatchingPatternsAreBothPresent() {
 		PatternsRequestCondition c = createPatternsCondition("/a", "/b");
-		assertThat(c.getPatterns().size()).isEqualTo(2);
+		assertThat(c.getPatterns()).hasSize(2);
 		Iterator<PathPattern> itr = c.getPatterns().iterator();
 		assertThat(itr.next().getPatternString()).isEqualTo("/a");
 		assertThat(itr.next().getPatternString()).isEqualTo("/b");
@@ -206,7 +209,7 @@ public class PatternsRequestConditionTests {
 		return new PatternsRequestCondition(Arrays
 				.stream(patterns)
 				.map(this.parser::parse)
-				.collect(Collectors.toList()));
+				.toList());
 	}
 
 }
