@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2022 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -28,14 +28,12 @@ import java.util.Set;
 import java.util.concurrent.CompletionException;
 import java.util.concurrent.CompletionStage;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
-import javax.servlet.ServletException;
-import javax.servlet.http.Cookie;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import javax.servlet.http.HttpServletResponseWrapper;
-
+import jakarta.servlet.ServletException;
+import jakarta.servlet.http.Cookie;
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.servlet.http.HttpServletResponse;
+import jakarta.servlet.http.HttpServletResponseWrapper;
 import org.reactivestreams.Publisher;
 import org.reactivestreams.Subscriber;
 import org.reactivestreams.Subscription;
@@ -51,6 +49,7 @@ import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpMethod;
 import org.springframework.http.HttpRange;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.HttpStatusCode;
 import org.springframework.http.InvalidMediaTypeException;
 import org.springframework.http.MediaType;
 import org.springframework.http.converter.GenericHttpMessageConverter;
@@ -81,7 +80,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 	private final Type entityType;
 
-	private int status = HttpStatus.OK.value();
+	private HttpStatusCode status = HttpStatus.OK;
 
 	private final HttpHeaders headers = new HttpHeaders();
 
@@ -94,16 +93,15 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	}
 
 	@Override
-	public EntityResponse.Builder<T> status(HttpStatus status) {
-		Assert.notNull(status, "HttpStatus must not be null");
-		this.status = status.value();
+	public EntityResponse.Builder<T> status(HttpStatusCode status) {
+		Assert.notNull(status, "HttpStatusCode must not be null");
+		this.status = status;
 		return this;
 	}
 
 	@Override
 	public EntityResponse.Builder<T> status(int status) {
-		this.status = status;
-		return this;
+		return status(HttpStatusCode.valueOf(status));
 	}
 
 	@Override
@@ -203,8 +201,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	@SuppressWarnings({"rawtypes", "unchecked"})
 	@Override
 	public EntityResponse<T> build() {
-		if (this.entity instanceof CompletionStage) {
-			CompletionStage completionStage = (CompletionStage) this.entity;
+		if (this.entity instanceof CompletionStage completionStage) {
 			return new CompletionStageEntityResponse(this.status, this.headers, this.cookies,
 					completionStage, this.entityType);
 		}
@@ -243,7 +240,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 		private final Type entityType;
 
-		public DefaultEntityResponse(int statusCode, HttpHeaders headers,
+		public DefaultEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, T entity, Type entityType) {
 
 			super(statusCode, headers, cookies);
@@ -265,7 +262,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			return null;
 		}
 
-		@SuppressWarnings({ "unchecked", "resource" })
+		@SuppressWarnings({ "unchecked", "resource", "rawtypes" })
 		protected void writeEntityWithMessageConverters(Object entity, HttpServletRequest request,
 				HttpServletResponse response, ServerResponse.Context context)
 				throws ServletException, IOException {
@@ -295,16 +292,14 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 			}
 
 			for (HttpMessageConverter<?> messageConverter : context.messageConverters()) {
-				if (messageConverter instanceof GenericHttpMessageConverter<?>) {
-					GenericHttpMessageConverter<Object> genericMessageConverter =
-							(GenericHttpMessageConverter<Object>) messageConverter;
+				if (messageConverter instanceof GenericHttpMessageConverter genericMessageConverter) {
 					if (genericMessageConverter.canWrite(entityType, entityClass, contentType)) {
 						genericMessageConverter.write(entity, entityType, contentType, serverResponse);
 						return;
 					}
 				}
 				if (messageConverter.canWrite(entityClass, contentType)) {
-					((HttpMessageConverter<Object>)messageConverter).write(entity, contentType, serverResponse);
+					((HttpMessageConverter<Object>) messageConverter).write(entity, contentType, serverResponse);
 					return;
 				}
 			}
@@ -339,8 +334,8 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 			return messageConverters.stream()
 					.filter(messageConverter -> messageConverter.canWrite(entityClass, null))
-					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes().stream())
-					.collect(Collectors.toList());
+					.flatMap(messageConverter -> messageConverter.getSupportedMediaTypes(entityClass).stream())
+					.toList();
 		}
 
 	}
@@ -351,7 +346,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class CompletionStageEntityResponse<T> extends DefaultEntityResponse<CompletionStage<T>> {
 
-		public CompletionStageEntityResponse(int statusCode, HttpHeaders headers,
+		public CompletionStageEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, CompletionStage<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
@@ -361,21 +356,27 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 		protected ModelAndView writeToInternal(HttpServletRequest servletRequest, HttpServletResponse servletResponse,
 				Context context) throws ServletException, IOException {
 
-			DeferredResult<?> deferredResult = createDeferredResult(servletRequest, servletResponse, context);
+			DeferredResult<ServerResponse> deferredResult = createDeferredResult(servletRequest, servletResponse, context);
 			DefaultAsyncServerResponse.writeAsync(servletRequest, servletResponse, deferredResult);
 			return null;
 		}
 
-		private DeferredResult<?> createDeferredResult(HttpServletRequest request, HttpServletResponse response,
+		private DeferredResult<ServerResponse> createDeferredResult(HttpServletRequest request, HttpServletResponse response,
 				Context context) {
 
-			DeferredResult<?> result = new DeferredResult<>();
-			entity().handle((value, ex) -> {
+			DeferredResult<ServerResponse> result = new DeferredResult<>();
+			entity().whenComplete((value, ex) -> {
 				if (ex != null) {
 					if (ex instanceof CompletionException && ex.getCause() != null) {
 						ex = ex.getCause();
 					}
-					result.setErrorResult(ex);
+					ServerResponse errorResponse = errorResponse(ex, request);
+					if (errorResponse != null) {
+						result.setResult(errorResponse);
+					}
+					else {
+						result.setErrorResult(ex);
+					}
 				}
 				else {
 					try {
@@ -386,7 +387,6 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 						result.setErrorResult(writeException);
 					}
 				}
-				return null;
 			});
 			return result;
 		}
@@ -399,7 +399,7 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 	 */
 	private static class PublisherEntityResponse<T> extends DefaultEntityResponse<Publisher<T>> {
 
-		public PublisherEntityResponse(int statusCode, HttpHeaders headers,
+		public PublisherEntityResponse(HttpStatusCode statusCode, HttpHeaders headers,
 				MultiValueMap<String, Cookie> cookies, Publisher<T> entity, Type entityType) {
 
 			super(statusCode, headers, cookies, entity, entityType);
@@ -468,7 +468,12 @@ final class DefaultEntityResponseBuilder<T> implements EntityResponse.Builder<T>
 
 			@Override
 			public void onError(Throwable t) {
-				this.deferredResult.setErrorResult(t);
+				try {
+					handleError(t, this.servletRequest, this.servletResponse, this.context);
+				}
+				catch (ServletException | IOException handlingThrowable) {
+					this.deferredResult.setErrorResult(handlingThrowable);
+				}
 			}
 
 			@Override
